<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_round_add_24dp"
        android:title="@string/comic_list_add"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/list_view"
        android:title="@string/comic_list_as_list"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_round_view_list_24dp" />
    <item
        android:id="@+id/sort"
        android:title="@string/comic_list_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter"
        android:title="@string/comic_list_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/sync"
        android:title="@string/comic_list_sync"
        app:showAsAction="never" />
</menu>