<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Seeneva Android Reader
  ~ Copyright (C) 2021 Sergei Solodovnikov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/info"
        android:title="@string/comic_list_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/mark_read"
        android:title="@string/comic_list_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/rename"
        android:title="@string/comic_list_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove"
        android:title="@string/comic_list_remove"
        app:showAsAction="never" />
</menu>